--- a/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
+++ b/lostAndFind-client/src/app/components/lostfound-item/lostfound-item.component.html
@@ -1,110 +1,102 @@
 <div class="container register">
-  <div class="row">
-    <div class="col-md-3 register-left">
-      <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
-      <h3>Welcome</h3>
-      <p>You can add new administrators and new Moderators....!</p>
-      <!-- <input type="submit" name="" value="Login" /><br /> -->
-      <div class="input-group form-group">
-        <ng-flash-message></ng-flash-message>
-      </div>
-    </div>
-    <div class="col-md-9 register-right">
-      <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-            aria-selected="true">Admin</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-            aria-selected="false">Moderator</a>
-        </li>
-      </ul>
-      <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <div class="row">
+        <div class="col-md-3 register-left">
+            <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
+            <h3>Welcome</h3>
+            <p>You can add new administrators and new Moderators....!</p>
+            <!-- <input type="submit" name="" value="Login" /><br /> -->
+            <div class="input-group form-group">
+                <ng-flash-message></ng-flash-message>
+            </div>
+        </div>
+        <div class="col-md-9 register-right">
+            <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Lost</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Found</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
-          <h3 class="register-heading">Lost Item</h3>
+                    <h3 class="register-heading">Lost Item</h3>
 
-          <form (submit)="onLostPostSubmit()" [formGroup]="lostForm">
-            <div class="row register-form">
+                    <form (submit)="onLostPostSubmit()" [formGroup]="lostForm">
+                        <div class="row register-form">
 
-              <div class="col-md-6">
+                            <div class="col-md-6">
 
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-id-card"></i></span>
-                  </div>
-                  <input name="location" type="text" class="form-control" formControlName="location" placeholder="location"
-                    [ngClass]="{'is-invalid': (location.touched || location.dirty) && location.invalid }">
-                  <div class="invalid-feedback" *ngIf="(location.touched || location.dirty) && location.invalid">
-                    Enter Location name.
-                  </div>
-                </div>
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                                    </div>
+                                    <input name="location" type="text" class="form-control" formControlName="location" placeholder="location" [ngClass]="{'is-invalid': (location.touched || location.dirty) && location.invalid }">
+                                    <div class="invalid-feedback" *ngIf="(location.touched || location.dirty) && location.invalid">
+                                        Enter Location name.
+                                    </div>
+                                </div>
 
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-address-card"></i></span>
-                  </div>
-                  <textarea class="form-control" name="description" formControlName="description" type="text"
-                    id="exampleFormControlTextarea1" rows="3" placeholder="Lost item Details"
-                    [ngClass]="{'is-invalid': (description.touched || description.dirty) && description.invalid }"></textarea>
-                  <div class="invalid-feedback" *ngIf="(description.touched || description.dirty) && description.invalid">
-                    Enter your item details.
-                  </div>
-                </div>
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-address-card"></i></span>
+                                    </div>
+                                    <textarea class="form-control" name="description" formControlName="description" type="text" id="exampleFormControlTextarea1" rows="3" placeholder="Lost item Details" [ngClass]="{'is-invalid': (description.touched || description.dirty) && description.invalid }"></textarea>
+                                    <div class="invalid-feedback" *ngIf="(description.touched || description.dirty) && description.invalid">
+                                        Enter your item details.
+                                    </div>
+                                </div>
 
-              </div>
-              <!--end col-md-6-->
+                            </div>
+                            <!--end col-md-6-->
 
-              <div class="col-md-6">
+                            <div class="col-md-6">
 
-                <!-- <div class="form-group">
+                                <!-- <div class="form-group">
                 <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
               </div> -->
-                <input type="submit" class="btnRegister" value="Submit" />
+                                <input type="submit" class="btnRegister" value="Submit" />
 
-              </div>
-              <!--end col-md-6-->
+                            </div>
+                            <!--end col-md-6-->
 
-            </div>
-            <!--end row register-form-->
-          </form>
-          <!--end form-->
+                        </div>
+                        <!--end row register-form-->
+                    </form>
+                    <!--end form-->
 
-        </div>
-
-        <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-          <h3 class="register-heading">Add New Moderator</h3>
-          <form (submit)="onRegisterSubmit()">
-            <div class="row register-form">
-
-              <div class="col-md-6">
-
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-id-card"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
                 </div>
 
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-user"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
+                <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                    <h3 class="register-heading">Add New Moderator</h3>
+                    <form (submit)="onRegisterSubmit()">
+                        <div class="row register-form">
 
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-user"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
+                            <div class="col-md-6">
 
-                <!-- <div class="form-group">
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                                    </div>
+                                    <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                                </div>
+
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-user"></i></span>
+                                    </div>
+                                    <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                                </div>
+
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-user"></i></span>
+                                    </div>
+                                    <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                                </div>
+
+                                <!-- <div class="form-group">
                   <select class="form-control">
                     <option class="hidden" selected disabled>Please select your Security Question</option>
                     <option>What is your Birth date?</option>
@@ -113,66 +105,63 @@
                   </select>
                 </div> -->
 
-                <div class="form-group">
-                  <div class="maxl">
-                    <label class="radio inline">
+                                <div class="form-group">
+                                    <div class="maxl">
+                                        <label class="radio inline">
                       <input type="radio" name="gender" value="male" checked>
                       <span> Male </span>
                     </label>
-                    <label class="radio inline">
+                                        <label class="radio inline">
                       <input type="radio" name="gender" value="female">
                       <span>Female </span>
                     </label>
-                  </div>
-                </div>
+                                    </div>
+                                </div>
 
-              </div>
-              <!--end col-md-6-->
+                            </div>
+                            <!--end col-md-6-->
 
-              <div class="col-md-6">
+                            <div class="col-md-6">
 
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-id-card"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                                    </div>
+                                    <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                                </div>
 
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-envelope"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                                    </div>
+                                    <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                                </div>
 
-                <div class="input-group form-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="fa fa-key"></i></span>
-                  </div>
-                  <input name="fName" type="text" class="form-control"
-                    placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
-                </div>
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-key"></i></span>
+                                    </div>
+                                    <input name="fName" type="text" class="form-control" placeholder="{{'REGISTER.PLACEHOLDER_FNAME' | translate}}">
+                                </div>
 
 
-                <!-- <div class="form-group">
+                                <!-- <div class="form-group">
                   <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
                 </div> -->
-                <input type="submit" class="btnRegister" value="Register" />
+                                <input type="submit" class="btnRegister" value="Register" />
 
-              </div>
-              <!--end col-md-6-->
+                            </div>
+                            <!--end col-md-6-->
 
+                        </div>
+                        <!--end row register-form-->
+                    </form>
+                    <!--end form-->
+
+                </div>
             </div>
-            <!--end row register-form-->
-          </form>
-          <!--end form-->
-
         </div>
-      </div>
     </div>
-  </div>
 
 </div>
 
